# financial_forecasting_api

./: .env.example  .env.local  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  seed_data.example.yaml
app/: main.py  models.py  schemas.py
app/api/: accounts.py  auth.py  bills.py  forecast.py  models.py  transactions.py  user_settings.py  users.py
app/core/: audit.py  config.py  database.py  forecasting.py  rate_limit.py  recurrence.py  security.py  seed.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: forecast.js
frontend/src/components/: AccountSelector.jsx  Alerts.jsx  BalanceCalendar.jsx  BalanceChart.jsx  ForecastTable.jsx  OverrideForm.jsx
tests/: conftest.py  helpers.py  test_api_forecast.py  test_forecast_override.py  test_forecasting.py  test_main.py  test_recurrence.py  test_seed.py  test_users.py
